# bevy_archive

./: AI_GUIDE.md  CHANGELOG.md  Cargo.toml  GUIDE.md  Readme.md  SCENARIOS.md
examples/: archetype_reduction_example.rs  arrow_archive.rs  arrow_archive_example.rs  aurora_manifest_example.rs  cross_ecs.rs  entity_snaphot.rs  hybrid_zip.rs  id_remap_example.rs  standard_api_example.rs
src/: archetype_archive.rs  arrow_archive.rs  arrow_snapshot.rs  aurora_archive.rs  bevy_registry.rs  csv_archive.rs  entity_archive.rs  flecs_archsnaphot.rs  flecs_registry.rs  lib.rs  mod.rs  serde_utils.rs  traits.rs
src/bevy_cmdbuffer/: buffer.rs  mod.rs
src/bevy_registry/: snapshot_factory.rs
src/bevy_registry/snapshot_factory/: codec.rs
src/bevy_registry/vec_snapshot_factory/: factory.rs  mod.rs
src/binary_archive/: arrow_column.rs  common.rs  mod.rs  msgpack_archive.rs  rmp_snapshot.rs  test.rs  world_snapshot.rs
src/binary_archive/world_snapshot/: sparse_entitiy_list.rs  zip_snapshot.rs
src/binary_archive/world_snapshot/flecs/: mod.rs
src/flecs_registry/: snapshot_factory.rs
src/flecs_registry/snapshot_factory/: codec.rs
src/flecs_registry/snapshot_factory/codec/: arrow.rs  json.rs
