[package]
name = "bevy_archive"
version = "0.1.0"
edition = "2024"
authors = ["cts chengts95@msn.cn"]
description = "An experimental ECS world snapshot system built on Bevy, featuring structured archetype storage and manifest-based serialization."
license = "MPL-2.0"
repository = "https://github.com/chengts95/bevy_archive"
readme = "README.md"
keywords = ["ecs", "bevy", "serialization", "snapshot"]
categories = ["data-structures"]
[[example]]
name = "cross_ecs"
required-features = ["flecs"]

[features]
default = ["bevy","flecs"]
bevy = []
flecs = ["flecs_ecs","bimap"]

[dependencies]
bevy_ecs =  "^0.16.0"
csv = "^1.3.1"
toml = "^0.8.20"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = ">=1.0"
bimap  = { version = "0.6.3", optional = true }
flecs_ecs = { version = "^0.1", optional = true }