[package]
name = "bevy_archive"
version = "0.2.1"
edition = "2024"
authors = ["cts chengts95@msn.cn"]
description = "An experimental ECS world snapshot system built on Bevy, featuring structured archetype storage and manifest-based serialization."
license = "MPL-2.0"
repository = "https://github.com/chengts95/bevy_archive"
readme = "README.md"
keywords = ["ecs", "bevy", "serialization", "snapshot"]
categories = ["data-structures"]
[[example]]
name = "cross_ecs"
required-features = ["flecs"]
[[example]]
name = "arrow_archive_example"
required-features = ["arrow_rs"]

[features]
default = ["bevy"]
bevy = []
#flecs = ["flecs_ecs","bimap"]
arrow_rs = ["dep:serde_arrow","dep:arrow","dep:parquet","dep:bytes","dep:zip" ,"dep:bytemuck","dep:serde_bytes"]

[dependencies]
bevy_ecs = {version = "^0.17.0", default-features=false ,features=[]}
csv = "^1.3.1"
toml = "^0.8.20"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = ">=1.0"
#bimap  = { version = "0.6.3", optional = true }
#flecs_ecs = { version = "^0.2", optional = true }
bumpalo = "3.17.0"
rmp-serde = "1.3.0"
base64 = "0.22.1"
serde_arrow = { version = "^0.13.6", optional = true,features=["arrow-56"] }
parquet = {version = "^56.1.0", optional = true}
arrow = {version = "^56.1.0", optional = true}
bytes = {version = "^1.10.1", optional = true} 
thiserror = "^2.0.16"
zip = {version ="5.1.1",optional = true}
bytemuck = {version ="1.23.2",optional = true}
serde_bytes ={version ="^0.11.19",optional = true} 
